fix: load image and change symbol > in code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Iuliia Raeva</h1>
     <h2>Intern Frontend Developer</h2>
-    <img class="avatar" src="/avatar.jpg" alt="Avatar">
+    <img class="avatar" src="./avatar.jpg" alt="Avatar">
     <section class="contact">
         <h2>Contact information:</h2>
         <div>
@@ -55,7 +55,7 @@
         <div class="code__listing">
             <p>function validatePIN (pin) {</p>
             <p>let nums = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0']</p>
-            <p>let pinDigits = pin.toString().split('').map(s => {</p>
+            <p>let pinDigits = pin.toString().split('').map(s =&gt; {</p>
             <p>if (nums.includes(s)) {return 1}</p>
             <p>else {return 0}</p>
             <p>})</p>
